--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /project_tb_behav.wcfg
 /Reti_logiche.srcs/sim_1
 /Reti_logiche.xpr
+/Documentation/build
+/Documentation/10613915_10599689.synctex.gz
