--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /Reti_logiche.srcs/sim_1
 /Documentation/build
 /Documentation/10613915_10599689.synctex.gz
-Reti_logiche.xpr
+/Reti_logiche.xpr
 *.exe
 *.out
 *.app
